# dbdesigner4_reverse_engineering_extra

./: README.md  pyproject.toml
app/: main.py  template.env
app/utilities/: settings.py
